javaDSL/src/test/resources/typeSystemTestModels/valid/expressions/PrimaryThis.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.expressions;

public class PrimaryThis {
  int n = 1;
  int m = this.n;
}
