javaDSL/src/test/resources/typeSystemTestModels/invalid/constructors/ConstructorModifiersValid.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.constructors;

public class ConstructorModifiersValid{

  abstract ConstructorModifiersValid(){

  }

  final ConstructorModifiersValid(){

  }

  static ConstructorModifiersValid(){

  }

  native ConstructorModifiersValid(){

  }
}
